--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "next": "12.0.8",
+    "next-react-svg": "^1.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
