--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "axios": "^0.25.0",
+    "jest": "^27.4.7",
     "next": "12.0.8",
     "next-react-svg": "^1.1.3",
     "react": "17.0.2",
@@ -20,6 +24,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
+    "react-test-renderer": "^17.0.2",
     "typescript": "4.5.4"
   }
 }
