--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@types/lodash.debounce": "^4.0.6",
     "axios": "^0.25.0",
     "jest": "^27.4.7",
+    "lodash.debounce": "^4.0.8",
     "next": "12.0.8",
     "next-react-svg": "^1.1.3",
     "react": "17.0.2",
