--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@testing-library/react": "^12.1.2",
     "@types/lodash.debounce": "^4.0.6",
     "axios": "^0.25.0",
+    "axios-mock-adapter": "^1.20.0",
     "jest": "^27.4.7",
     "lodash.debounce": "^4.0.8",
     "next": "12.0.8",
+    "next-page-tester": "^0.30.0",
     "next-react-svg": "^1.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
+    "nock": "^13.2.2",
     "react-test-renderer": "^17.0.2",
     "typescript": "4.5.4"
   }
